gitops/root/components/envoy-gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: microscaler-dev
  labels:
    app.kubernetes.io/part-of: shared-gitops-k8s-cluster
    gitops.microscaler.io/stack: envoy-gateway
  annotations:
    gitops.microscaler.io/edge: "*.dev.microscaler.local"
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: microscaler-dev
    namespace: envoy-gateway-system
